# proyecto-juasjaus

./: .dockerignore  .gitignore  .replit  API_DOCUMENTATION.md  DOCUMENTACION.txt  DOCUMENTACION_7-10_COMPLETA.md  README.md  README_ARCH.txt  TESTING_GUIDE.md  docker-compose.override.yml  docker-compose.yml  noc.txt  package.json  prueba.html  pyproject.toml  run.bat  run.sh  start-dev.bat  start-dev.sh
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  arch-restructuring.md
.github/workflows/: ci.yml
backend/: .env  .env.example  Dockerfile  app.py  cbtis258.db  config.py  main.py  models.py  otp_codes.db  prompt.txt  requirements.txt  requirements_no_uvloop.txt  run.py  run_no_reload.py
backend/.venv311/: pyvenv.cfg
backend/app/: config.py  database.py  main.py
backend/instance/: cbtis258.db
backend/routes/: auth.py
backend/services/: email_service.py  google_auth.py
docker/: README.md
frontend/: debug.html  login.css  login.html  login.js  manifest.json  package.json  reset-password.html  reset_password.html  rewrite_html.py  sw.js
frontend (1)/: index.html  login.css  package-lock.json  package.json  replace_css.py  rewrite_html.py  tailwind.config.js  vite.config.js
frontend (1)/public/: manifest.json  sw.js
frontend-react/: Dockerfile  index.html  oauth2-callback.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
mobile/: .env  app.json  expo-env.d.ts  package-lock.json  package.json  tsconfig.json.bak
presentacion/: fix_pptx.py
proyecto-juasjaus-main/: README.md  chatbot.txt  run.bat
(+201 files in other folders)
